infrastructure/database/base/pgamdin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-pgadmin4
  labels:
    app.kubernetes.io/name: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin4
      app.kubernetes.io/instance: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin4
        app.kubernetes.io/instance: pgadmin
      annotations:
        checksum/secret: d923e1f40dd3e5cbb52bcd2f2d04edf57c965e34949674b70d8976a96a55589d

    spec:
      containers:
        - name: pgadmin4
          image: "docker.io/dpage/pgadmin4:6.7"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              port: http
              path: /misc/ping
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              port: http
              path: /misc/ping
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 15
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
          resources:
            {}
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-pgadmin4
      securityContext:
        fsGroup: 5050
        runAsGroup: 5050
        runAsUser: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-pgadmin4
  labels:
    app.kubernetes.io/name: pgadmin4
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pgadmin4
    app.kubernetes.io/instance: pgadmin
